// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<Alert
  hasShadow={true}
  isLiveRegionAtomic={false}
  liveRegionPoliteness="assertive"
  margin="small"
  open={true}
  screenReaderOnly={false}
  timeout={0}
  transition="fade"
  variant="error"
>
  uh oh
</Alert>
`;

exports[`renders with Error details 1`] = `
<Alert
  hasShadow={true}
  isLiveRegionAtomic={false}
  liveRegionPoliteness="assertive"
  margin="small"
  open={true}
  screenReaderOnly={false}
  timeout={0}
  transition="fade"
  variant="error"
>
  uh oh
  <span
    style={
      {
        "display": "none",
      }
    }
  >
    whoops
  </span>
</Alert>
`;

exports[`renders with string details 1`] = `
<Alert
  hasShadow={true}
  isLiveRegionAtomic={false}
  liveRegionPoliteness="assertive"
  margin="small"
  open={true}
  screenReaderOnly={false}
  timeout={0}
  transition="fade"
  variant="error"
>
  uh oh
  <span
    style={
      {
        "display": "none",
      }
    }
  >
    whoops
  </span>
</Alert>
`;
